--- a/规则说明新版.md
+++ b/规则说明新版.md
@@ -277,72 +277,41 @@ M3 =   700
 M6 = 1 500 + 1 900 + 700 = 4 100
 
 
-
 模块编号：M7
-
-模块名称：今日交易次数
-
-统计范围：今天所有交易
-
-规则：
-
-B = Buy（买入）
-
-S = Sell（卖出）
-
-P = Short（卖空）
-
-C = Cover（回补）
-
-显示格式：B/x S/y P/z C/w 【总次数】
-
-说明：
-
-每条交易记录计一次。
-
-
-
-示例（案例 A）：
-
-B/1 S/1 P/1 C/1 【4】
-
-
-
-模块编号：M7
-
-模块名称：今日交易次数
-
-统计范围：今天所有交易（按 FIFO 配对后的成交批次数）
-
-规则：
-
-对每笔 买入（B）或 卖空（P）指令，计为 1 次交易。
-
-对每笔 卖出（S）或 回补（C）指令：
-
-按 FIFO 原则，将成交数量拆分匹配到最早的持仓批次；
-
-每匹配成功一次（即每一批次被平掉），计 1 次交易；
-
-如果一个指令平掉了多于一批持仓，则按批次数累加。
-
-显示格式：B/x S/y P/z C/w 【总次数】
-
-其中，y 和 w 分别是拆分后所有 S 和 C 批次数之和。
-买入和卖空不拆批，一条指令始终算 1 次。
-示例（基于FIFO）：
-
-09:00 BUY 10 股 @10 → B/1
-
-10:00 BUY 10 股 @9 → B/1
-
-11:00 SELL 20 股 @11
-
-首先平掉 10 股成本 10 → S 批次 1
-
-再平掉 10 股成本 9 → S 批次 2
-
-→ S/2
+📛 模块名称：今日交易次数
+📌 统计规则（通俗版）：
+M7 表示今天所有成交指令所形成的“真实交易笔数”，基于 FIFO 拆分原则，按批次统计平仓交易。
+📘 规则详解：
+1️⃣ 买入（B）和 卖空（P）
+每一笔指令都计为 1 次交易；
+不拆批；
+举例：
+BUY 10 股 → B/1
+SELL SHORT 30 股 → P/1
+2️⃣ 卖出（S）和 回补（C）
+要根据 FIFO 规则，将这笔指令拆成多个“平掉批次”来统计交易次数；
+每“平掉一批”就算一次交易；
+如果一次指令平掉多个批次，就按批次数累加；
+举例：
+您有两个持仓批次：
+批次A：10 股成本 $10
+批次B：10 股成本 $9
+现在 SELL 20 股，就会拆成：
+S/2（因为卖出一次，平掉了 2 批）
+🧾 显示格式：
+B/x S/y P/z C/w 【总次数】
+B 和 P：直接等于指令条数；
+S 和 C：是“平掉的批次数总和”；
+总次数 = B + S + P + C（含拆批之后的累加结果）
+🧪 示例演算：
+09:00 BUY 10 股 @10 → B/1  
+10:00 BUY 10 股 @9 → B/1  
+11:00 SELL 20 股 @11 →  
+  - 平掉 10 股 @10 → S/1  
+  - 再平掉 10 股 @9 → S/1  
+==> M7 = B/2 S/2 【总共 4 次】
+✅ 总结一句话：
+M7 是一个“指令数 + 平仓批次数”的混合统计项，目的是更真实地反映今日发生的成交行为总量。
 
 
 
@@ -431,32 +400,38 @@ L = 亏损配对次数（盈亏 < 0）
 输出：W/2 L/0 100%
 
 
-
 模块编号：M11
-
 模块名称：WTD（本周累计真实盈利）
-
 统计范围：本周全部交易日
 
-规则：M11 = 本周每日 M6 之和，周一至当日。
-
-
-
 模块编号：M12
-
 模块名称：MTD（本月累计真实盈利）
-
 统计范围：本月全部交易日
 
-规则：M12 = 本月每日 M6 之和（每月1日至每月31日）
-
-
-
 模块编号：M13
-
 模块名称：YTD（本年累计真实盈利）
-
 统计范围：本年度全部交易日
 
-规则：M13 = 本年每日 M6 之和（每年1月1日至每年12月31日）
+新定义：
+WTD = ∑（本周每一天的 M4 + M5.2）+ 当前持仓的 M3
+换句话说：
+已实现部分（每天的平仓盈利） → 正常累计；
+当前持仓的浮动盈亏（M3） → 只在“今天”加一次，不重复；
+这样：看到的 WTD 就既包括“这周赚了多少钱”，也反映了“目前浮盈/浮亏多少”。
 
+📘 举例说明：
+假设一周内只发生了这些事：
+日期	M4	M5.2	M3	说明
+周一	100	200	0	已实现 300
+周二	0	0	0	无交易，无浮盈
+周三	0	0	0	无交易，无浮盈
+周四	0	0	0	无交易，无浮盈
+周五	0	0	800	当前持仓浮盈 +800
+那么 WTD =周一（100+200） + M3（800） = 300 + 800 = **1100**
+⚠️ 注意避免错误的做法：
+❌ 不能用每天的 M6（含 M3）累加，因为 M3 会每天变化，重复累加；
+✅ 只能每天累计 M4+M5.2，最后加一次“今天的 M3”。
+✅ 最终推荐公式：WTD = sum of (每日 M4 + M5.2，从周一到今天) + 今天的 M3
+同理：
+MTD = 本月所有天的 (M4 + M5.2) 累加 + 今天的 M3
+YTD = 本年所有天的 (M4 + M5.2) 累加 + 今天的 M3
