--- a/apps/web/data/real/go-live/2025-08-01.md
+++ b/apps/web/data/real/go-live/2025-08-01.md
@@ -1,10 +1,7 @@
-# Go-Live Verification — 2025-08-01
+# Go-Live 2025-08-01
 
-- M4: 6530.00
-- M5.1: 1670.00
-- M5.2: 1320.00
-- M9: 7850.00
-- Diff: 0
-- dailyResult.json 条数: 1
-
-结论：指标与前台一致，满足上线校验要求。
+- M4=6530
+- M5.1=1670
+- M5.2=1320
+- M9=7850
+- diff=0
